--- a/src/main/resources/regression/neuclir22-fa-dt.yaml
+++ b/src/main/resources/regression/neuclir22-fa-dt.yaml
@@ -47,15 +47,15 @@ qrels_root: src/main/resources/topics-and-qrels/
 topics:
   - name: "[NeuCLIR 2022 (Persian): title](https://neuclir.github.io/)"
     id: title
-    path: topics.neuclir22.en.title.tsv
+    path: topics.neuclir22-en.orig-title.tsv
     qrel: qrels.neuclir22-fa.txt
   - name: "[NeuCLIR 2022 (Persian): desc](https://neuclir.github.io/)"
     id: desc
-    path: topics.neuclir22.en.desc.tsv
+    path: topics.neuclir22-en.orig-desc.tsv
     qrel: qrels.neuclir22-fa.txt
   - name: "[NeuCLIR 2022 (Persian): desc+title](https://neuclir.github.io/)"
     id: desc_title
-    path: topics.neuclir22.en.desc.title.tsv
+    path: topics.neuclir22-en.orig-desc_title.tsv
     qrel: qrels.neuclir22-fa.txt
 
 models:
