--- a/src/main/resources/regression/neuclir22-fa-dt.yaml
+++ b/src/main/resources/regression/neuclir22-fa-dt.yaml
@@ -45,17 +45,17 @@ topic_reader: TsvInt
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 topics:
-  - name: "[NeuCLIR 2022 (Persian): title](https://neuclir.github.io/)"
+  - name: "[NeuCLIR 2022 (Persian): title (original English queries)](https://neuclir.github.io/)"
     id: title
-    path: topics.neuclir22-en.orig-title.tsv
+    path: topics.neuclir22-en.original-title.tsv
     qrel: qrels.neuclir22-fa.txt
-  - name: "[NeuCLIR 2022 (Persian): desc](https://neuclir.github.io/)"
+  - name: "[NeuCLIR 2022 (Persian): desc (original English queries)](https://neuclir.github.io/)"
     id: desc
-    path: topics.neuclir22-en.orig-desc.tsv
+    path: topics.neuclir22-en.original-desc.tsv
     qrel: qrels.neuclir22-fa.txt
-  - name: "[NeuCLIR 2022 (Persian): desc+title](https://neuclir.github.io/)"
+  - name: "[NeuCLIR 2022 (Persian): desc+title (original English queries)](https://neuclir.github.io/)"
     id: desc_title
-    path: topics.neuclir22-en.orig-desc_title.tsv
+    path: topics.neuclir22-en.original-desc_title.tsv
     qrel: qrels.neuclir22-fa.txt
 
 models:
