--- a/src/main/resources/docgen/templates/neuclir22-zh-dt.template
+++ b/src/main/resources/docgen/templates/neuclir22-zh-dt.template
@@ -1,6 +1,10 @@
 # Anserini Regressions: NeuCLIR22 &mdash; Chinese (Document Translation)
 
-This page documents BM25 regression experiments for the [TREC 2022 NeuCLIR Track](https://neuclir.github.io/), Chinese, using document translation (i.e., corpus translation provided by the organizers).
+This page presents **document translation** regression experiments for the [TREC 2022 NeuCLIR Track](https://neuclir.github.io/), Chinese, with the following configuration:
+
++ Queries: English
++ Documents: Machine-translated documents from Chinese into English (corpus provided by the organizers)
++ Model: BM25
 
 The exact configurations for these regressions are stored in [this YAML file](${yaml}).
 Note that this page is automatically generated from [this template](${template}) as part of Anserini's regression pipeline, so do not modify this page directly; modify the template instead.
