--- a/src/main/resources/regression/neuclir22-fa-qt-splade.yaml
+++ b/src/main/resources/regression/neuclir22-fa-qt-splade.yaml
@@ -46,15 +46,15 @@ topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 topics:
   - name: "[NeuCLIR 2022 (Persian): title (human-translated queries)](https://neuclir.github.io/)"
-    id: orig-title
+    id: ht-title
     path: topics.neuclir22-fa.splade.ht-title.txt.gz
     qrel: qrels.neuclir22-fa.txt
   - name: "[NeuCLIR 2022 (Persian): desc (human-translated queries)](https://neuclir.github.io/)"
-    id: orig-desc
+    id: ht-desc
     path: topics.neuclir22-fa.splade.ht-desc.txt.gz
     qrel: qrels.neuclir22-fa.txt
   - name: "[NeuCLIR 2022 (Persian): desc+title (human-translated queries)](https://neuclir.github.io/)"
-    id: orig-desc_title
+    id: ht-desc_title
     path: topics.neuclir22-fa.splade.ht-desc_title.txt.gz
     qrel: qrels.neuclir22-fa.txt
   - name: "[NeuCLIR 2022 (Persian): title (machine-translated queries)](https://neuclir.github.io/)"
