--- a/src/main/resources/regression/neuclir22-ru-qt-splade.yaml
+++ b/src/main/resources/regression/neuclir22-ru-qt-splade.yaml
@@ -3,13 +3,13 @@ corpus: neuclir22-ru
 corpus_path: collections/multilingual/neuclir22-ru-splade/
 
 index_path: indexes/lucene-index.neuclir22-ru-splade
-collection_class: NeuClirCollection
+collection_class: JsonVectorCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 8
-index_options: -storePositions -storeDocvectors -storeRaw -language ru
+index_options: -impact -pretokenized -storeDocvectors
 index_stats:
-  documents: 4627541
-  documents (non-empty): 4627532
+  documents: 4627543
+  documents (non-empty): 4627543
 
 metrics:
   - metric: MAP
@@ -45,77 +45,125 @@ topic_reader: TsvInt
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 topics:
-  - name: "[NeuCLIR 2022 (Russian): title](https://neuclir.github.io/)"
-    id: title
-    path: topics.neuclir22-ru.orig-title.txt
+  - name: "[NeuCLIR 2022 (Russian): title (human-translated queries)](https://neuclir.github.io/)"
+    id: ht-title
+    path: topics.neuclir22-ru.splade.ht-title.txt.gz
     qrel: qrels.neuclir22-ru.txt
-  - name: "[NeuCLIR 2022 (Russian): desc](https://neuclir.github.io/)"
-    id: desc
-    path: topics.neuclir22-ru.orig-desc.txt
+  - name: "[NeuCLIR 2022 (Russian): desc (human-translated queries)](https://neuclir.github.io/)"
+    id: ht-desc
+    path: topics.neuclir22-ru.splade.ht-desc.txt.gz
     qrel: qrels.neuclir22-ru.txt
-  - name: "[NeuCLIR 2022 (Russian): desc+title](https://neuclir.github.io/)"
-    id: desc_title
-    path: topics.neuclir22-ru.orig-desc_title.txt
+  - name: "[NeuCLIR 2022 (Russian): desc+title (human-translated queries)](https://neuclir.github.io/)"
+    id: ht-desc_title
+    path: topics.neuclir22-ru.splade.ht-desc_title.txt.gz
+    qrel: qrels.neuclir22-ru.txt
+  - name: "[NeuCLIR 2022 (Russian): title (machine-translated queries)](https://neuclir.github.io/)"
+    id: mt-title
+    path: topics.neuclir22-ru.splade.mt-title.txt.gz
+    qrel: qrels.neuclir22-ru.txt
+  - name: "[NeuCLIR 2022 (Russian): desc (machine-translated queries)](https://neuclir.github.io/)"
+    id: mt-desc
+    path: topics.neuclir22-ru.splade.mt-desc.txt.gz
+    qrel: qrels.neuclir22-ru.txt
+  - name: "[NeuCLIR 2022 (Russian): desc+title (machine-translated queries)](https://neuclir.github.io/)"
+    id: mt-desc_title
+    path: topics.neuclir22-ru.splade.mt-desc_title.txt.gz
     qrel: qrels.neuclir22-ru.txt
 
 models:
-  - name: bm25-default
-    display: BM25 (default)
-    params: -bm25 -language ru
+  - name: splade
+    display: SPLADE
+    params: -impact -pretokenized
     results:
       MAP:
-        - 0.2821
-        - 0.2107
-        - 0.2662
+        - 0.3212
+        - 0.2721
+        - 0.2808
+        - 0.3212
+        - 0.2721
+        - 0.2808
       nDCG@20:
-        - 0.3668
-        - 0.3138
-        - 0.3665
+        - 0.4452
+        - 0.3922
+        - 0.4156
+        - 0.4452
+        - 0.3922
+        - 0.4156
       J@20:
-        - 0.3732
-        - 0.3522
-        - 0.3943
+        - 0.3706
+        - 0.3684
+        - 0.3846
+        - 0.3706
+        - 0.3684
+        - 0.3846
       Recall@1000:
-        - 0.7125
-        - 0.6655
-        - 0.7421
-  - name: bm25-default+rm3
+        - 0.7725
+        - 0.7200
+        - 0.7669
+        - 0.7725
+        - 0.7200
+        - 0.7669
+  - name: splade+rm3
     display: +RM3
-    params: -bm25 -rm3 -language ru
+    params: -impact -pretokenized -rm3
     results:
       MAP:
-        - 0.2049
-        - 0.1287
-        - 0.1653
+        - 0.3212
+        - 0.2604
+        - 0.2808
+        - 0.3212
+        - 0.2604
+        - 0.2808
       nDCG@20:
-        - 0.2984
-        - 0.2155
-        - 0.2638
+        - 0.4452
+        - 0.3792
+        - 0.4156
+        - 0.4452
+        - 0.3792
+        - 0.4156
       J@20:
-        - 0.3246
-        - 0.2592
-        - 0.2917
+        - 0.3706
+        - 0.3689
+        - 0.3846
+        - 0.3706
+        - 0.3689
+        - 0.3846
       Recall@1000:
-        - 0.6471
-        - 0.5406
-        - 0.6320
-  - name: bm25-default+rocchio
+        - 0.7725
+        - 0.7150
+        - 0.7669
+        - 0.7725
+        - 0.7150
+        - 0.7669
+  - name: splade+rocchio
     display: +Rocchio
-    params: -bm25 -rocchio -language ru
+    params: -impact -pretokenized -rocchio
     results:
       MAP:
-        - 0.2649
-        - 0.2458
-        - 0.2734
+        - 0.3097
+        - 0.2891
+        - 0.2929
+        - 0.3097
+        - 0.2891
+        - 0.2929
       nDCG@20:
-        - 0.3572
-        - 0.3366
-        - 0.3630
+        - 0.4337
+        - 0.3965
+        - 0.4075
+        - 0.4337
+        - 0.3965
+        - 0.4075
       J@20:
-        - 0.3873
-        - 0.3803
+        - 0.3807
+        - 0.3697
+        - 0.3947
+        - 0.3807
+        - 0.3697
         - 0.3947
       Recall@1000:
-        - 0.7381
-        - 0.7276
-        - 0.7770
+        - 0.7918
+        - 0.7090
+        - 0.7590
+        - 0.7918
+        - 0.7090
+        - 0.7590
