--- a/src/main/resources/regression/neuclir22-zh-qt-splade.yaml
+++ b/src/main/resources/regression/neuclir22-zh-qt-splade.yaml
@@ -1,12 +1,12 @@
 ---
-corpus: neuclir22-zh
+corpus: neuclir22-zh-splade
 corpus_path: collections/multilingual/neuclir22-zh-splade/
 
 index_path: indexes/lucene-index.neuclir22-zh-splade
-collection_class: NeuClirCollection
+collection_class: JsonVectorCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 8
-index_options: -storePositions -storeDocvectors -storeRaw -language zh
+index_options: -impact -pretokenized -storeDocvectors
 index_stats:
   documents: 3179206
   documents (non-empty): 3179206
@@ -45,25 +45,40 @@ topic_reader: TsvInt
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 topics:
-  - name: "[NeuCLIR 2022 (Chinese): title](https://neuclir.github.io/)"
-    id: title
-    path: topics.neuclir22-zh.orig-title.txt
+  - name: "[NeuCLIR 2022 (Chinese): title (human-translated queries)](https://neuclir.github.io/)"
+    id: ht-title
+    path: topics.neuclir22-zh.splade.ht-title.txt.gz
     qrel: qrels.neuclir22-zh.txt
-  - name: "[NeuCLIR 2022 (Chinese): desc](https://neuclir.github.io/)"
-    id: desc
-    path: topics.neuclir22-zh.orig-desc.txt
+  - name: "[NeuCLIR 2022 (Chinese): desc (human-translated queries)](https://neuclir.github.io/)"
+    id: ht-desc
+    path: topics.neuclir22-zh.splade.ht-desc.txt.gz
     qrel: qrels.neuclir22-zh.txt
-  - name: "[NeuCLIR 2022 (Chinese): desc+title](https://neuclir.github.io/)"
-    id: desc_title
-    path: topics.neuclir22-zh.orig-desc_title.txt
+  - name: "[NeuCLIR 2022 (Chinese): desc+title (human-translated queries)](https://neuclir.github.io/)"
+    id: ht-desc_title
+    path: topics.neuclir22-zh.splade.ht-desc_title.txt.gz
+    qrel: qrels.neuclir22-zh.txt
+  - name: "[NeuCLIR 2022 (Chinese): title (machine-translated queries)](https://neuclir.github.io/)"
+    id: mt-title
+    path: topics.neuclir22-zh.splade.mt-title.txt.gz
+    qrel: qrels.neuclir22-zh.txt
+  - name: "[NeuCLIR 2022 (Chinese): desc (machine-translated queries)](https://neuclir.github.io/)"
+    id: mt-desc
+    path: topics.neuclir22-zh.splade.mt-desc.txt.gz
+    qrel: qrels.neuclir22-zh.txt
+  - name: "[NeuCLIR 2022 (Chinese): desc+title (machine-translated queries)](https://neuclir.github.io/)"
+    id: mt-desc_title
+    path: topics.neuclir22-zh.splade.mt-desc_title.txt.gz
     qrel: qrels.neuclir22-zh.txt
 
 models:
-  - name: bm25-default
-    display: BM25 (default)
-    params: -bm25 -language zh
+  - name: splade
+    display: SPLADE
+    params: -impact -pretokenized
     results:
       MAP:
+        - 0.1505
+        - 0.1306
+        - 0.1734
         - 0.1505
         - 0.1306
         - 0.1734
@@ -71,7 +86,13 @@ models:
         - 0.2478
         - 0.2068
         - 0.2572
+        - 0.2478
+        - 0.2068
+        - 0.2572
       J@20:
+        - 0.3895
+        - 0.3588
+        - 0.4298
         - 0.3895
         - 0.3588
         - 0.4298
@@ -79,11 +100,17 @@ models:
         - 0.4759
         - 0.4577
         - 0.4940
-  - name: bm25-default+rm3
+        - 0.4759
+        - 0.4577
+        - 0.4940
+  - name: splade+rm3
     display: +RM3
-    params: -bm25 -rm3 -language zh
+    params: -impact -pretokenized -rm3
     results:
       MAP:
+        - 0.1501
+        - 0.0925
+        - 0.1367
         - 0.1501
         - 0.0925
         - 0.1367
@@ -91,7 +118,13 @@ models:
         - 0.2127
         - 0.1519
         - 0.1891
+        - 0.2127
+        - 0.1519
+        - 0.1891
       J@20:
+        - 0.3132
+        - 0.2461
+        - 0.2925
         - 0.3132
         - 0.2461
         - 0.2925
@@ -99,11 +132,17 @@ models:
         - 0.4651
         - 0.3703
         - 0.4373
-  - name: bm25-default+rocchio
+        - 0.4651
+        - 0.3703
+        - 0.4373
+  - name: splade+rocchio
     display: +Rocchio
-    params: -bm25 -rocchio -language zh
+    params: -impact -pretokenized -rocchio
     results:
       MAP:
+        - 0.1692
+        - 0.1251
+        - 0.1888
         - 0.1692
         - 0.1251
         - 0.1888
@@ -111,11 +150,20 @@ models:
         - 0.2544
         - 0.1985
         - 0.2734
+        - 0.2544
+        - 0.1985
+        - 0.2734
       J@20:
         - 0.4004
         - 0.3689
         - 0.4298
+        - 0.4004
+        - 0.3689
+        - 0.4298
       Recall@1000:
+        - 0.5230
+        - 0.5113
+        - 0.5327
         - 0.5230
         - 0.5113
         - 0.5327
