--- a/src/main/resources/regression/neuclir22-fa-qt-splade.yaml
+++ b/src/main/resources/regression/neuclir22-fa-qt-splade.yaml
@@ -6,7 +6,7 @@ index_path: indexes/lucene-index.neuclir22-fa-splade
 collection_class: JsonVectorCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 8
-index_options: -impact -pretokenized -storeDocvectors
+index_options: -impact -pretokenized -storeRaw
 index_stats:
   documents: 2232016
   documents (non-empty): 2232016
@@ -105,7 +105,7 @@ models:
         - 0.8437
   - name: splade+rm3
     display: +RM3
-    params: -impact -pretokenized -rm3
+    params: -impact -pretokenized -rm3 -collection JsonVectorCollection
     results:
       MAP:
         - 0.2896
@@ -137,7 +137,7 @@ models:
         - 0.8437
   - name: splade+rocchio
     display: +Rocchio
-    params: -impact -pretokenized -rocchio
+    params: -impact -pretokenized -rocchio -collection JsonVectorCollection
     results:
       MAP:
         - 0.2984
