--- a/pom.xml
+++ b/pom.xml
@@ -470,5 +470,15 @@
       <artifactId>tokenizers</artifactId>
       <version>0.21.0</version>
     </dependency>
+    <dependency>
+      <groupId>com.microsoft.onnxruntime</groupId>
+      <artifactId>onnxruntime</artifactId>
+      <version>1.11.0</version>
+    </dependency>
+    <dependency>
+      <groupId>ai.djl</groupId>
+      <artifactId>api</artifactId>
+      <version>0.18.0</version>
+    </dependency>
   </dependencies>
 </project>
