--- a/src/main/resources/docgen/templates/neuclir22-zh-dt-splade.template
+++ b/src/main/resources/docgen/templates/neuclir22-zh-dt-splade.template
@@ -4,10 +4,13 @@ This page presents **document translation** regression experiments for the [TREC
 
 + Queries: English
 + Documents: Machine-translated documents from Chinese into English (corpus provided by the organizers)
-+ Model: SPLADE
++ Model: [SPLADE CoCondenser SelfDistil](https://huggingface.co/naver/splade-cocondenser-selfdistil)
 
 The exact configurations for these regressions are stored in [this YAML file](${yaml}).
 Note that this page is automatically generated from [this template](${template}) as part of Anserini's regression pipeline, so do not modify this page directly; modify the template instead.
+
+We make available a version of the corpus that has already been encoded with [SPLADE CoCondenser SelfDistil](https://huggingface.co/naver/splade-cocondenser-selfdistil), i.e., we performed model inference on every document and stored the output sparse vectors.
+Thus, no neural inference is required to reproduce these experiments; see instructions below.
 
 From one of our Waterloo servers (e.g., `orca`), the following command will perform the complete regression, end to end:
 
@@ -17,7 +20,20 @@ python src/main/python/run_regression.py --index --verify --search --regression 
 
 ## Corpus Download
 
-TODO
+Download the corpus and unpack into `collections/`:
+
+```bash
+wget https://rgw.cs.uwaterloo.ca/pyserini/data/neuclir22-zh-en-splade.tar -P collections/
+tar xvf collections/neuclir22-zh-en-splade.tar -C collections/
+```
+
+To confirm, `neuclir22-zh-en-splade.tar` is 4.0 GB and has MD5 checksum `3ca6540bd4312db359975b9f90fad069`.
+With the corpus downloaded, the following command will perform the remaining steps below:
+
+```bash
+python src/main/python/run_regression.py --index --verify --search --regression ${test_name} \
+  --corpus-path collections/${corpus}
+```
 
 ## Indexing
 
